Update Gradle config for CI
https://stackoverflow.com/a/51364393